GNOME Bugzilla – Bug 708983
+CGDCONT=? parser fails to parse single context results
Last modified: 2013-11-01 14:50:56 UTC
With a Nokia N82: ModemManager[17845]: <debug> [1380340023.797037] [mm-at-serial-port.c:436] debug_log(): (ttyACM0): <-- '<CR><LF>+CGDCONT: (1),"IP",,,(0),(0)<CR><LF>+CGDCONT: (1),"IPV6",,,(0),(0)<CR><LF><CR><LF>OK<CR><LF>' +CGDCONT: (1),"IP",,,(0),(0) +CGDCONT: (1),"IPV6",,,(0),(0) but the regex expects more than one context of each type: r = g_regex_new ("\\+CGDCONT:\\s*\\((\\d+)-(\\d+)\\),\\(?\"(\\S+)\"", G_REGEX_DOLLAR_ENDONLY | G_REGEX_RAW, 0, &inner_error); This causes the supported IP types to be empty: IP | supported: 'none'
Fix pushed to git master as 1b3114a0f9c. This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.