modem-helpers: handle +CGDCONT=? replies with single context

https://bugzilla.gnome.org/show_bug.cgi?id=708983